<resources>
    <string name="app_name">FreeRoading Driver</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_media">Choose Media</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="msg_session_expired">Your session has been expired \n Please login again!</string>
    <string name="msg_server_error">There is a problem with our system. We apologize for the inconvenience caused. Please try again later. If the problem persist, please contact us.</string>
    <string name="permission">Permission</string>
    <string name="phone_permission_rationale">Phone permissions is required to continue "
    </string>
    <string name="easy_ride_anywhere">Drive <font color="red"><b>Live </b></font>Ride</string>
    <string name="login">Login</string>
    <string name="loginunderline"><u>Login</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_email">Email/Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="show_txt">Show</string>
    <string name="forgotpassword_txt">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signup_underline"><u> Sign Up</u></string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="font_opensans_light">OpenSans-Light.ttf</string>
    <string name="check_email_for_otp">Check your mobile. We just sent you an OTP. Please enter it below to choose new password.</string>
    <string name="verify">Verify</string>
    <string name="hint_enter_otp">Enter OTP Number</string>
    <string name="click_here"><u>Click here</u></string>
    <string name="to_resend">to resend.</string>
    <string name="didn_t_receive_the_otp_on_your_email">Didn\'t receive the OTP on your mobile?</string>
    <string name="hint_new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit_btn">Submit</string>
    <string name="choose_your_new_password">Choose your new password</string>
    <string name="enter_code">Enter code</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_enter_your_phone_no_and_we_ll_send_you_an_otp_to_reset_your_password">Please enter your phone no and we\'ll send you an OTP to reset your password.</string>
    <string name="mobile_not_found">The mobile number specified was not found in our system. Please make sure to use the mobile number that was used during registration.</string>
    <string name="enter_confirmation_code_that_was_sent_to_your_registered_email_address">Enter OTP number that was sent to your registered mobile number.</string>
    <string name="enter_nmobile_nubmer">ENTER\nMOBILE NUBMER</string>
    <string name="mobile_number_nnot_found">MOBILE NUMBER\nNOT FOUND</string>
    <string name="otp_sent">OTP SENT</string>
    <string name="choose_your_new_pass">CHOOSE YOUR\nNEW PASSWORD</string>
    <string name="sign_up_cap">SIGN UP</string>
    <string name="hint_name">Name</string>
    <string name="email">Email</string>
    <string name="by_signing_up_you_agree_to">By Signing up, you agree to</string>
    <string name="terms_amp_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mobile_verification">MOBILE\nVERIFICATION</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="choose_options">CHOOSE\nOPTIONS</string>
    <string name="sound">Sound</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="help">Help</string>
    <string name="tnc"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="old_pass">Old Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="as_a_passenger">As a passenger</string>
    <string name="as_a_driver">As a driver</string>
</resources>