<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/email_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background">

        <include layout="@layout/arrow_header_layout"/>


        <com.apps.freeroadingdriver.customviews.TypeFaceTextviewItalicBold
            android:id="@+id/title"
            style="@style/whiteHeadingTextviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/mobile_verification"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:orientation="vertical">

            <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                style="@style/regularblackTextviewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:gravity="center"
                android:text="@string/enter_confirmation_code_that_was_sent_to_your_registered_email_address" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otpWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:theme="@style/TextLabel">

                <com.apps.freeroadingdriver.customviews.TypeFaceEditText
                    android:id="@+id/otp_edittext"
                    style="@style/editTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_otp"
                    android:inputType="number"
                    android:imeOptions="actionDone" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.apps.freeroadingdriver.customviews.TypeFaceButton
                android:id="@+id/verifyButton"
                style="@style/yellowButton"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/verify" />

            <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                style="@style/regularblackTextviewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/didn_t_receive_the_otp_on_your_email"
                android:layout_marginTop="@dimen/_40sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resendView"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_85sdp"
                android:orientation="horizontal">

                <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                    android:id="@+id/clickhereLabel"
                    style="@style/regularblackTextviewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here" />


                <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                    style="@style/regularblackTextviewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_resend"
                    android:layout_marginLeft="@dimen/_3sdp"/>

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/progress_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</ScrollView>
