<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/otp_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        layout="@layout/arrow_header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <com.apps.freeroadingdriver.customviews.TypeFaceTextviewItalicBold
                android:id="@+id/title"
                style="@style/whiteHeadingTextviewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_35sdp"
                android:gravity="center"
                android:text="@string/otp_sent" />

            <ImageView
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/right" />


            <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                style="@style/regularblackTextviewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/check_email_for_otp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otpWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:theme="@style/TextLabel">

                <com.apps.freeroadingdriver.customviews.TypeFaceEditText
                    android:id="@+id/otp_edittext"
                    style="@style/editTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_otp"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.apps.freeroadingdriver.customviews.TypeFaceButton
                android:id="@+id/verifyButton"
                style="@style/yellowButton"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/verify" />

            <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                style="@style/regularblackTextviewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/didn_t_receive_the_otp_on_your_email" />

            <LinearLayout
                android:id="@+id/resendHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                    android:id="@+id/clickhereLabel"
                    style="@style/regularblackTextviewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here" />


                <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                    style="@style/regularblackTextviewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/to_resend" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:orientation="horizontal">

                <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                    style="@style/regularblackTextviewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here" />


                <com.apps.freeroadingdriver.customviews.TypeFaceTextview
                    style="@style/regularblackTextviewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/to_resend" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/progress_bar_layout" />
</RelativeLayout>
